Corrigindo apontamentos Sonar